[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "toolkit-multimodal-dataset-qa"
version = "0.1.0"
description = "Multimodal Dataset QA: dataset scanning, hashing, and dedupe reports for text/image/audio."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Toolkit Contributors" }]
keywords = ["dataset", "qa", "dedupe", "hashing", "multimodal"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/AKIVA-AI/toolkit-mmqa"
Repository = "https://github.com/AKIVA-AI/toolkit-mmqa"
Documentation = "https://github.com/AKIVA-AI/toolkit-mmqa#readme"
"Bug Tracker" = "https://github.com/AKIVA-AI/toolkit-mmqa/issues"

dependencies = []

[project.scripts]
toolkit-mmqa = "toolkit_mmqa.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.0",
  "pyright>=1.1.380",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["toolkit_mmqa"]
omit = ["*/toolkit_mmqa/__main__.py"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 80

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["toolkit_mmqa"]

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
toolkit_mmqa = ["py.typed"]
